src/App.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');

:root {
  --yellow: #60A5FA;
  --orange: #398ff9;
  --black: #242D49;
  --gray: #788097;
  --blueCard: #DDF8FE;
  --purple: rgb(238 210 255);
  --boxShadow: 0px 19px 60px rgb(0 0 0 / 8%);
  --orangeCard: rgba(252, 166, 31, 0.45);
  --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
}

body {
  font-family: 'Playfair Display', serif;
}

.App {
  overflow: hidden;
  color: var(--black);
}

.button {
  background: linear-gradient(180deg, #60A5FA 26.71%, #398ff9 99.36%);
  border-radius: 34px;
  border: none;
  color: white;
  font-size: 16px;
  padding: 11px 26px 11px 26px;
}

.button:hover {
  background: white;
  cursor: pointer;
  color: var(--orange);
}
.flex-display{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  gap: 0.6rem;
}
.btn-flex{
  gap: 1rem;
  display: flex;
  margin-top: 1rem;
}
.button-2{
  background: white;
  color: var(--orange);
  border: 1px solid var(--orange);
  border-radius: 34px;
  padding: 11px 26px 11px 26px;
  font-size: 16px;
}
.button-2:hover{
  background: linear-gradient(180deg, #60A5FA 26.71%, #398ff9 99.36%);
  color: white;
  cursor: pointer;
}
@media screen and (max-width: 480px) {
  .App {
    padding: 0.5rem 1rem;

  }
}

